added tables and button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,59 @@
 </head>
 <body>
     <h1>What Lorem says...</h1>
+    <div class="container">
+        <div>
+            <h1>Hardwork Pays</h1>
+        </div>
+        <div>
+            <h1>Consistency is key</h1>
+        </div>
+    </div>
+    <table>
+        <tr>
+            <td>Item 1</td>
+            <td>Item 2</td>
+            <td>Item 3</td>
+            <td>Item 4</td>
+        </tr>
+        <tr>
+            <td>Food</td>
+            <td>Cars</td>
+            <td>Dresses</td>
+            <td>others</td>
+        </tr>
+        <tr>
+            <td>Food</td>
+            <td>Cars</td>
+            <td>Dresses</td>
+            <td>others</td>
+        </tr>
+        <tr>
+            <td>Food</td>
+            <td>Cars</td>
+            <td>Dresses</td>
+            <td>others</td>
+        </tr>
+        <tr>
+            <td>Food</td>
+            <td>Cars</td>
+            <td>Dresses</td>
+            <td>others</td>
+        </tr>
+        <tr>
+            <td>Food</td>
+            <td>Cars</td>
+            <td>Dresses</td>
+            <td>others</td>
+        </tr>
+        <tr>
+            <td>Food</td>
+            <td>Cars</td>
+            <td>Dresses</td>
+            <td>others</td>
+        </tr>
+    </table>
+    <button><a href="#">Click Me</a></button>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
      Dignissimos accusamus ipsam libero tempora nostrum nisi harum, 
      fugiat perferendis quidem, 
