--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
             <td>Dresses</td>
             <td>others</td>
         </tr>
+        <tr>
+            <td>Food</td>
+            <td>Cars</td>
+            <td>Dresses</td>
+            <td>others</td>
+        </tr>
     </table>
     <button><a href="#">Click Me</a></button>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
